--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,11 @@
     padding: 15px 0;
     margin-bottom: 0;
     .navbar-brand {
-    padding: 0;
+        padding: 0;
+    }
 }
+.navbar-brand {
+    img {
+        width: 120px;
+    }
 }
